[project]
name = "datavisualization-langgraph"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "odh-magentic", email = "odh@magentic.com" }
]
dependencies = [
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
    "python-dotenv>=1.0.1",
    "datasets>=3.2.0",
    "huggingface-hub>=0.27.0",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]
